app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-application
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: maahin/flask_app:1.0
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
    nodePort: 31000
